--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Claras passion for kostumer</h1>
-    <h2>Film og Teater</h2>
+    <h1 class="h1-1">Claras passion for kostumer</h1>
+    <h2 class="h2-1s">Film og Teater</h2>
 </body>
 
 </html>
