--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&display=swap" rel="stylesheet">
 </head>
+<header>
+    <div class="logo">
+        <a href="index.html">Forside</a>
+    </div>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Forside</a></li>
+            <li><a href="stillfotos.html">Stillfotos</a></li>
+            <li><a href="diagram.html">Layout Diagram</a></li>
+            <li><a href="galleri.html">Galleri</a></li>
+        </ul>
+    </nav>
+</header>
 
 <body>
-    <h1 class="h1-1">Claras passion for kostumer</h1>
-    <h2 class="h2-1s">Film og Teater</h2>
+    <h1 class="h1-1">Claras passion og arbejde som kostumier</h1>
+    <h2 class="h2-1">Film og Teater branchen</h2>
+    <h1 class="h1-1">En Film med Clara Bisgaard</h1>
+
+
+    <h2 class="h2-1">Lavet af Emil</h2>
 </body>
 
 </html>
