--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
         <ul>
             <li><a href="index.html">Forside</a></li>
             <li><a href="stillfotos.html">Stillfotos</a></li>
-            <li><a href="diagram.html">Layout Diagram</a></li>
-            <li><a href="galleri.html">Galleri</a></li>
         </ul>
     </nav>
 </header>
@@ -31,7 +29,7 @@
     <h2 class="h2-1">Film og Teater branchen</h2>
     <h1 class="h1-1">En Film med Clara Bisgaard</h1>
 
-
+    <video src="http"></video>
     <h2 class="h2-1">Lavet af Emil</h2>
 </body>
 
