--- a/stillfotos.html
+++ b/stillfotos.html
@@ -7,13 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="layout.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&display=swap" rel="stylesheet">
 </head>
+<header>
+    <div class="logo">
+        <a href="index.html">Forside</a>
+    </div>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Forside</a></li>
+            <li><a href="stillfotos.html">Stillfotos</a></li>
+        </ul>
+    </nav>
+</header>
 
 <body>
-
+    <h1 class="h1-1">Stillfotos</h1>
+    <div>
+        <div class="grid_1-1">
+            <img src="billeder/billede1.webp" alt="stativ">
+            <img src="billeder/billede2.webp" alt="scene">
+        </div>
+        <div>
+            <img src="billeder/billede3.webp" alt="vandet">
+            <img src="billeder/billede4.webp" alt="portræt">
+        </div>
+        <img class="img5" src="billeder/billede5.webp" alt="portræt">
+    </div>
 </body>
 
 </html>
