--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <h2 class="h2-1">Film og Teater branchen</h2>
     <h1 class="h1-1">En Film med Clara Bisgaard</h1>
 
-    <video src="http"></video>
+    <video src="http://emilhoeier.dk/kea/05_indhold/01_pilotvideo/pilotvideo.mp4"></video>
+
     <h2 class="h2-1">Lavet af Emil</h2>
 </body>
 
